<resources>
    <string name="signUp">SignUp</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="emailHint">email@example.com</string>
    <string name="passwordHint">password</string>
    <string name="firstNameHint">Your First Name</string>
    <string name="lastNameHint">Your Last Name</string>
    <string name="activationCodeHint">activation code</string>
    <string name="nameHint">Your Name</string>
    <string name="telNumberHint">Telephone Number</string>
    <string name="addressHint">Address</string>
    <string name="mainTitle">Login Account</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="ranking_toolbar_title">Ranking</string>
    <string name="lottery_toolbar_title">Lottery</string>
    <string name="profile_edit_toolbar_title">Profile Editing</string>
    <string name="wallet_toolbar_title">Wallet</string>
    <string name="redeem_points_toolbar_title">Redeem Points</string>
    <string name="qrcode_toolbar_title">Transaction Code</string>

    <string name="tab_campaign">Campaign</string>
    <string name="tab_notice">Notice</string>
    <string name="tab_ranking">Ranking</string>
    <string name="tab_wallet">Wallet</string>
    <string name="tab_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draw_lots_button">Draw</string>
    <string name="point_unit">pt</string>
    <string name="middleNameHint">Your Middle Name</string>
    <string name="done">Done</string>
    <string name="ranking_title_ranking">Ranking</string>
    <string name="ranking_title_prize">Prize</string>
    <string name="goto_login">Login >></string>
    <string name="start_button">Start</string>
    <string name="goto_signup">SignUp >></string>
    <string name="title_activity_activate">ActivateActivity</string>
    <string name="activate_description">When you get code from email. Please type it.</string>
    <string name="complete_message">Have a good time!</string>
</resources>
